// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identifier.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{"a":1, "b":2}

=====================================output=====================================
{ "a": 1, "b": 2 }

================================================================================
`;

exports[`issue-4009.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    "foo": "bar"
}

=====================================output=====================================
{
  "foo": "bar"
}

================================================================================
`;

exports[`issue-7116.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ "b": 2 }

=====================================output=====================================
{ "b": 2 }

================================================================================
`;

exports[`issue2297.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{"a":1, "b":2}

=====================================output=====================================
{"a":1, "b":2}

================================================================================
`;
